traces/bug_878.txt
src/bamglib/Mesh2.cpp:3704: error: DEAD_STORE
  The value written to &NbVerticesOnGeomEdgex (type long) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:3704:5: Write of unused value
3702.   	   NbVertexOnBThEdge =NbOfNewPoints;
3703.   	   VertexOnBThEdge = new  VertexOnEdge[NbOfNewPoints];
3704.   	   NbVerticesOnGeomEdgex = NbOfNewPoints; }
            ^
3705.   	NbOfNewPoints =0;
3706.   	NbOfNewEdge = 0;
